Copyright (c) 2002-2009 Infrae. All rights reserved.
See also LICENSE.txt

Silva changes


  Silva 2.1.3 (unreleased)

    Bug fixes

  Silva 2.1.2 (2009-03-05)

    Bug fixes

      - Redirect to the nearest publication when login out from SMI.

      - Refactor all the SidebarCache service. Remove cache objects
        from temporary container, use GenericCache when available.

      - Remove the 'edit_mode' and 'editor' variable from
        macro_index. They are just required for SilvaDocument, and
        where triggering ConflictErrors.

      - Fix for a bug and improvement of the code for scaling and
        cropping images.
    
    Bug fixes ported from trunk (Silva 2.2)

      - Improved/fixed the support for complex lists in kupu

  Silva 2.1.2b4 (2009-02-26)

    Bug fixes

      - Fix errors on the XSLT renderer.

  Silva 2.1.2b3 (2009-02-20)

    Bug fixes

      - Fix an  another race condition  on the sidebar.

  Silva 2.1.2b2 (2009-02-17)

    Bug fixes

      - Fix translations 'save + enter' on folders and publications.

      - Fix a race condition on the sidebar in SMI, which makes make
        two request on the server, creating from times to times a
        ConflictError or ReadConflictError.


  Silva 2.1.2b1 (2009-02-11)

    Bug fixes

      - Added sup and sub selectors to frontend.css to keep
        superscript and subscript better aligned.

      - Removed the sortable css id/class from templates, js, and
        stylesheets. This triggered some link problems with listing
        links that rendered as blocks instead of inline. Could've used
        the id but extensions may not have it, so added an unblock
        class to be used in a tbody or tr.

      - Fixed Internet Explorer 7 kupu issue triggered when clicking
        the unordered list button.

      - Fixed 310589: Silva AutoTOC ignores "types to list" setting
        when using silva sort order.

      - Fix broken subscription service when using MaildropHost (use